[gd_scene load_steps=5 format=2]

[ext_resource path="res://objects/Scripts/label_option.gd" type="Script" id=1]
[ext_resource path="res://fonts/runescape_uf.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="RectangleShape2D" id=1]
resource_local_to_scene = true
extents = Vector2( 26, 16 )

[node name="Label" type="Label"]
margin_right = 26.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 2 )
text = "test"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D" parent="." groups=["option_hitbox"]]
position = Vector2( 26, 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[connection signal="resized" from="." to="." method="_on_Label_resized"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
